<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Demonstrates sending and receiving SMS messages.
     See corresponding Java code SmsMessagingDemo.java
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dip">
        <CheckBox
            android:id="@+id/sms_enable_receiver"
            android:text="@string/sms_enable_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TableLayout
            android:padding="6dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow android:layout_width="fill_parent">
                <TextView android:text="@string/sms_recipient_label" />
                <EditText android:id="@+id/sms_recipient" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/sms_content_label" />
                <EditText android:id="@+id/sms_content" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/sms_send_message"
                    android:text="@string/sms_send_message"
                    android:layout_column="1" />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/sms_status"
                    android:layout_column="1" />
            </TableRow>
        </TableLayout>
        <TableLayout
            android:padding="6dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow android:layout_width="fill_parent">
                <TextView android:text="@string/sms_recipient_label" />
            	<Button 
	            	android:id="@+id/sms_recipients_file_selection" 
           			android:text="Pick Recipients"
           			android:layout_width="wrap_content"
           			android:layout_height="wrap_content"
           			/>
            </TableRow>
            <TableRow>
                <TextView android:text="@string/sms_content_label" />
            	<Button 
	            	android:id="@+id/sms_message_file_selection" 
           			android:text="Pick Content"
           			android:layout_width="wrap_content"
           			android:layout_height="wrap_content"
           			/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/sms_send_bulk_message"
                    android:text="@string/sms_send_bulk_message"
                    android:layout_column="1" />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/sms_bulk_status"
		            android:layout_span="2" android:layout_gravity="center_horizontal"/>
            </TableRow>
        </TableLayout>
	</LinearLayout>
</ScrollView>
